--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <button onclick="loadText()">Load</button>
 
 <label for="kindleFile">Load Kindle File:</label>
-<input type="file" id="kindleFile" accept="text/plain">
+<input type="text" id="kindleFile" accept="text/plain">
 
 <script>
     // Function to set a cookie with the given name and value
